--- a/css/main.css
+++ b/css/main.css
@@ -10,8 +10,42 @@ body {
 }
 
 .header {
-     padding: 5px 0px;
-     background-color: #212932;
+     padding: 10px 0px;
+}
+
+.navbar-brand {
+     font-size: 40px;
+     font-weight: 200;
+}
+
+.header__span {
+     color: dodgerblue;
+     font-weight: 600;
+}
+
+.navbar-nav {
+     display: flex;
+     align-items: center;
+     margin-left: 70px;
+}
+
+.nav-link {
+     padding: 0px 0px 5px 0px;
+     margin-left: 40px;
+     border-bottom: 2px solid transparent;
+     font-size: 16px;
+     color: #fff;
+     transition: 0.6s;
+}
+
+.nav-link:hover {
+     border-bottom: 2px solid dodgerblue;
+}
+
+.form-control {
+     border: none;
+     border-bottom: 1px solid dodgerblue;
+     background-color: transparent;
 }
 
 .hero {
@@ -74,6 +108,7 @@ body {
 
 .movie__item {
      position: relative;
+     top: 0;
      padding: 180px 10px 20px 20px;
      margin: 15px;
      margin-top: 70px;
@@ -81,10 +116,20 @@ body {
      min-height: 250px;
      border-radius: 15px;
      background-color: #050E12;
+     cursor: pointer;
+     transition: all 0.3s ease-in-out;
+}
+
+.movie__item:hover {
+     top: -10px;
+     box-shadow: rgba(247, 249, 252, 0.411) 0px 2px 8px 0px;
 }
 
 .movie__img {
      position: absolute;
+     width: 200px;
+     height: 200px;
+     object-fit: cover;
      top: -55px;
      left: 24px;
      border-radius: 15px;
@@ -100,16 +145,29 @@ body {
      margin-bottom: 0px !important;
 }
 
-.movie__panel {
+.movie__over {
      display: none;
-     padding: 30px;
+     position: fixed;
+     top: 0px;
+     left: 0px;
+     width: 100%;
+     height: 100vh;
+     background-color: rgba(0, 0, 0, 0.151);
+     z-index: 1;
+}
+
+.movie__panel {
+     margin: 0 auto;
      position: absolute;
      top: 50%;
-     left: 300px;
+     left: 50%;
+     transform: translate(-50%, -50%);
+     z-index: 10;
+     padding: 30px;
      width: 700px;
-     min-height: 400px;
+     min-height: 350px;
      border-radius: 15px;
-     background-color: #000000;
+     background-color: #000;
      box-shadow: rgba(228, 222, 222, 0.1) 0px 4px 12px;
 }
 
@@ -123,9 +181,11 @@ body {
      background-color: transparent;
      background-image: url("../img/icons8-close\ \(1\).svg");
      background-size: cover;
+     transition: 0.6s;
 }
 
 .close-btn:hover {
+     transform: scale(1.2);
      opacity: 0.8;
 }
 
@@ -134,8 +194,15 @@ body {
 }
 
 .movie__panel-img {
+     width: 250px;
+     height: 200px;
      margin-right: 30px;
      border-radius: 10px;
+     transition: 0.6s;
+}
+
+.movie__panel-img:hover {
+     transform: scale(1.05);
 }
 
 .movie__panel-box {
